--- a/app/src/main/res/layout/activity_cast_detail.xml
+++ b/app/src/main/res/layout/activity_cast_detail.xml
@@ -39,7 +39,7 @@
 
                 <ImageView
                     android:id="@+id/image_cast"
-                    imageUrl="@{viewModel.mCastObservableField.profilePath}"
+                    imageUrlCast="@{viewModel.mCastObservableField.profilePath}"
                     android:layout_width="@dimen/dp_100"
                     android:layout_height="@dimen/dp_100"
                     android:layout_margin="@dimen/dp_8"
