--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
-            android:background="@android:color/white"
+            android:background="@color/color_teal_50_700"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,7 @@
             android:layout_marginEnd="@dimen/dp_4"
             android:layout_marginRight="@dimen/dp_4"
             android:layout_marginBottom="@dimen/dp_4"
-            android:background="@null"
+            android:background="@android:color/white"
             android:hint="@string/hint_search"
             android:imeOptions="actionSearch"
             android:inputType="textPersonName"
