--- a/app/src/main/res/layout/item_movie_by.xml
+++ b/app/src/main/res/layout/item_movie_by.xml
@@ -20,7 +20,7 @@
 
         <ImageView
             android:id="@+id/image_movie"
-            imageUrl="@{viewModel.mMovieObservableField.posterPath}"
+            imageUrlMovie="@{viewModel.mMovieObservableField.posterPath}"
             android:layout_width="@dimen/dp_100"
             android:layout_height="@dimen/dp_150"
             android:src="@drawable/default_movie"
