--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -224,7 +224,7 @@
                     android:id="@+id/text_release_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.movieDetailObservableField.releaseDate}"
+                    converseDate="@{viewModel.movieDetailObservableField.releaseDate}"
                     app:layout_constraintLeft_toLeftOf="@id/title_release_date"
                     app:layout_constraintTop_toBottomOf="@id/title_release_date" />
 
