--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -24,10 +24,10 @@
 
             <ImageView
                 android:id="@+id/image_movie"
+                imageUrlMovie="@{viewModel.mMovieObservableField.posterPath}"
                 android:layout_width="@dimen/dp_100"
                 android:layout_height="@dimen/dp_120"
-                android:scaleType="centerCrop"
-                imageUrlMovie="@{viewModel.mMovieObservableField.posterPath}" />
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/text_title"
@@ -36,7 +36,7 @@
                 android:layout_marginLeft="@dimen/dp_8"
                 android:singleLine="true"
                 android:text="@{viewModel.mMovieObservableField.title}"
-                android:textSize="@dimen/sp_20"
+                android:textSize="@dimen/sp_18"
                 app:layout_constraintLeft_toRightOf="@id/image_movie"
                 app:layout_constraintRight_toLeftOf="@id/button_favorite"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_8"
                 android:layout_marginBottom="@dimen/dp_8"
-                android:text="@{viewModel.mMovieObservableField.releaseDate}"
+                converseDate="@{viewModel.mMovieObservableField.releaseDate}"
                 android:textSize="@dimen/sp_15"
                 app:layout_constraintBottom_toTopOf="@id/rating_bar_vote_average"
                 app:layout_constraintLeft_toRightOf="@id/image_movie" />
