--- a/app/src/main/res/layout/item_movie_by.xml
+++ b/app/src/main/res/layout/item_movie_by.xml
@@ -42,7 +42,7 @@
             android:id="@+id/text_release_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.mMovieObservableField.releaseDate}"
+            converseDate="@{viewModel.mMovieObservableField.releaseDate}"
             app:layout_constraintLeft_toLeftOf="@id/text_title"
             app:layout_constraintTop_toBottomOf="@id/text_title" />
 
