--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/color_teal_50_700</item>
         <item name="colorPrimaryDark">@color/color_teal_50_700</item>
-        <item name="colorAccent">@color/color_accent</item>
+        <item name="colorAccent">@color/color_teal_50_700</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
